--- a/app/src/main/res/layout/activity_show_aarti.xml
+++ b/app/src/main/res/layout/activity_show_aarti.xml
@@ -42,7 +42,7 @@
         ads:layout_constraintTop_toTopOf="parent"
         ads:layout_constraintStart_toEndOf="@id/tvPreArrow"
         ads:layout_constraintEnd_toStartOf="@id/tvNxtArrow"
-        ads:layout_constraintBottom_toTopOf="@id/adView">
+        ads:layout_constraintBottom_toBottomOf="parent">
         <TextView
             android:id="@+id/txt"
             android:layout_width="match_parent"
@@ -53,7 +53,7 @@
             android:textStyle="bold"/>
     </ScrollView>
 
-    <com.google.android.gms.ads.AdView
+    <!--<com.google.android.gms.ads.AdView
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -61,5 +61,5 @@
         ads:adUnitId="@string/banner_ad_unit_id"
         ads:layout_constraintBottom_toBottomOf="parent"
         ads:layout_constraintEnd_toEndOf="parent"
-        ads:layout_constraintStart_toStartOf="parent" />
+        ads:layout_constraintStart_toStartOf="parent" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
